[tool.poetry]
name = "python-example-environment"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
rdkit = "^2022.9.5"
scipy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
